<resources>
    <string name="app_name">Spendy</string>


    //Sign Up
    <string name="txtName">Name</string>
    <string name="txtSignUp">Sign Up</string>
    <string name="txtSurname">Surname</string>
    <string name="txtEMail">E-Mail</string>
    <string name="txtPassword">Password</string>
    <string name="txtPasswordConfirm">Confirm Password</string>

    <string name="btnSignUp">Sign Up</string>
    <string name="btnSignIn">Sign In</string>
    <string name="title_activity_tab_statistics">ActivityTabStatistics</string>
    <string name="tab_text_1">Expense</string>
    <string name="tab_text_2">Income</string>
    <string name="btnSendEmail">Send E-Mail</string>
    <string name="tvForgotPassword">Forgot Password?</string>
    <string name="cbAccept">I have accepted Terms And Conditions</string>
...
